--- a/README
+++ b/README
@@ -21,4 +21,4 @@ Created by vhbit
 Thanks to HandleOpenURL for documenting the Twitter iOS5 Scheme
 http:handleopenurl.com/scheme/twitter
 
-Released under the MIT License.
+Licensed under the MIT License.
